feat: update contract

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,16 @@
+# 合約部署資訊
+PACKAGE_ID=YOUR_PACKAGE_ID
+LOT_ID=YOUR_LOT_ID
+SPACE_ID=YOUR_SPACE_ID
+
+# Operator（營運商）- 創建停車場並鑄造停車格
 OPERATOR_ADDRESS=YOUR_OPERATOR_ADDRESS
 OPERATOR_PRIVATE_KEY=YOUR_OPERATOR_PRIVATE_KEY
+
+# Alice（用戶）- 購買停車格獲得收益分潤
 ALICE_ADDRESS=YOUR_ALICE_ADDRESS
 ALICE_PRIVATE_KEY=YOUR_ALICE_PRIVATE_KEY
+
+# Bob（駕駛人）- 支付停車費
 BOB_ADDRESS=YOUR_BOB_ADDRESS
 BOB_PRIVATE_KEY=YOUR_BOB_PRIVATE_KEY
