--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -9,5 +9,8 @@
         "outputDirectory": "dist"
       }
     }
+  ],
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
